2008-05-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/bindings-second-mode.lisp (define-second-key #\a): New
	binding on 'add-default-frame'.

	* src/clfswm-autodoc.lisp (produce-*-doc-*-in-file): Show a
	message to follow the autodocumentation process.

2008-05-10  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (bind-or-jump): Bind "Tab", "Return" and
	"Space" to jump to a child. "B" to bind a slot on the current
	child.

	* src/bindings-second-mode.lisp: Use "Tab" instead of
	"Iso_Left_Tab".

2008-05-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (find-child-under-mouse): Take care of
	unmanaged (hidden) windows.

	* src/clfswm-internal.lisp (place-window-from-hints): Give a
	minimal size for windows.
	(with-all-windows-frames-and-parent): New function.

	* src/config.lisp (*default-window-width/height*): New parameters.

	* src/clfswm-internal.lisp (place-window-from-hints): Center
	windows in the screen instead of in there frame.

	* src/bindings-second-mode.lisp (tile-space-current-frame): New
	binding on C-t.

	* src/clfswm-layout.lisp (register-layout): Intern the once name
	in the right package.

2008-05-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* doc/dot-clfswmrc: Update to  follow the new clfswm way.

2008-05-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (set-current-child)
	(adapt-child-to-parent, show-child, hide-child): Handle the case
	where child is not a frame or a window.

	* src/clfswm-util.lisp
	(mouse-click-to-focus-generic,mouse-focus-move/resize-generic):
	Check if child is a frame.

	* src/clfswm-internal.lisp (managed-window-p): Handle the case
	where frame is null.
	(place-frame): Check if frame and parent are frames.

	* src/clfswm-info.lisp (info-mode): display all frame info before
	leaving.

	* src/clfswm-second-mode.lisp (second-key-mode): display all frame
	info before leaving.
