@@ -60,7 +60,7 @@
           Right
         </td>
         <td style="color:#0000ff" nowrap>
-          Select the next brother frame
+          Select the next sister frame
         </td>
       </tr>
       <tr>
@@ -71,7 +71,7 @@
           Left
         </td>
         <td style="color:#0000ff" nowrap>
-          Select the previous brother frame
+          Select the previous sister frame
         </td>
       </tr>
       <tr>
@@ -723,7 +723,7 @@
           Right
         </td>
         <td style="color:#0000ff" nowrap>
-          Select the next brother frame
+          Select the next sister frame
         </td>
       </tr>
       <tr>
@@ -734,7 +734,7 @@
           Left
         </td>
         <td style="color:#0000ff" nowrap>
-          Select the previous brother frame
+          Select the previous sister frame
         </td>
       </tr>
       <tr>
