@@ -8,8 +8,8 @@ Main mode keys:
 
 Mod-1                F1              Open the help and info window
 Mod-1 Control Shift  Home            Quit clfswm
-Mod-1                Right           Select the next brother frame
-Mod-1                Left            Select the previous brother frame
+Mod-1                Right           Select the next sister frame
+Mod-1                Left            Select the previous sister frame
 Mod-1                Down            Select the previous level in frame
 Mod-1                Up              Select the next level in frame
 Mod-1                Tab             Select the next child
@@ -75,8 +75,8 @@ Control              Less            Open the main menu
                      Escape          Leave second mode
                      T               Tile with spaces the current frame
 Mod-1 Control Shift  Home            Quit clfswm
-Mod-1                Right           Select the next brother frame
-Mod-1                Left            Select the previous brother frame
+Mod-1                Right           Select the next sister frame
+Mod-1                Left            Select the previous sister frame
 Mod-1                Down            Select the previous level in frame
 Mod-1                Up              Select the next level in frame
 Mod-1                Tab             Select the next child
