@@ -102,8 +102,8 @@
 
 (define-second-key ("Home" :mod-1 :control :shift) 'quit-clfswm)
 
-(define-second-key ("Right" :mod-1) 'select-next-brother)
-(define-second-key ("Left" :mod-1) 'select-previous-brother)
+(define-second-key ("Right" :mod-1) 'select-next-sister)
+(define-second-key ("Left" :mod-1) 'select-previous-sister)
 
 (define-second-key ("Down" :mod-1) 'select-previous-level)
 (define-second-key ("Up" :mod-1) 'select-next-level)
